--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/svelte-fontawesome": "^0.2.3",
+    "@vercel/analytics": "^1.5.0",
     "deno": "^2.4.0"
   }
 }
