--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
     "@sveltejs/adapter-auto": "^6.0.0",
+    "@sveltejs/enhanced-img": "^0.7.0",
     "@sveltejs/kit": "^2.16.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/vite": "^4.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
