--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "prettier --check . && eslint .",
+    "export:resume": "node scripts/export-resume-pdf.js",
+    "export:resume:with-server": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && npm run export:resume\" --kill-others --success first"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -21,6 +23,7 @@
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/vite": "^4.0.0",
+    "concurrently": "^9.2.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
@@ -28,12 +31,14 @@
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "puppeteer": "^24.16.2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
-    "vite": "^6.2.6"
+    "vite": "^6.2.6",
+    "wait-on": "^8.0.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
