--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
-    "export-resume": "node scripts/export-resume-pdf.js"
+    "export-resume-pdf": "node scripts/export-resume-pdf.js"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
