--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
-    "export-resume-pdf": "node scripts/export-resume-pdf.js"
+    "export-resume-pdf": "node scripts/export-resume-pdf.js",
+    "build-json-resume": "tsx scripts/build-json-resume.ts"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -34,6 +35,7 @@
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0",
+    "tsx": "^4.20.4",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
     "vite": "^6.2.6",
