--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
     "export-resume-pdf": "node scripts/export-resume-pdf.js",
-    "build-json-resume": "tsx scripts/build-json-resume.ts"
+    "build-json-resume": "tsx scripts/build-json-resume.ts",
+    "render-resume": "resumed render dist/resume.json --output dist/resume.html --theme jsonresume-theme-even"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -48,6 +49,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/svelte-fontawesome": "^0.2.3",
     "@vercel/analytics": "^1.5.0",
-    "deno": "^2.4.0"
+    "deno": "^2.4.0",
+    "jsonresume-theme-even": "^0.23.0",
+    "resumed": "^6.0.0"
   }
 }
