--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
+    "jsonresume-theme-even": "^0.23.0",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "puppeteer": "^24.16.2",
+    "resumed": "^6.0.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0",
@@ -49,8 +51,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/svelte-fontawesome": "^0.2.3",
     "@vercel/analytics": "^1.5.0",
-    "deno": "^2.4.0",
-    "jsonresume-theme-even": "^0.23.0",
-    "resumed": "^6.0.0"
+    "deno": "^2.4.0"
   }
 }
