--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
-    "export-resume-pdf": "node scripts/export-resume-pdf.js",
+    "export-resume-pdf": "tsx scripts/export-resume-pdf.ts",
     "build-json-resume": "tsx scripts/build-json-resume.ts",
     "render-resume": "resumed render dist/resume.json --output dist/resume.html --theme jsonresume-theme-even"
   },
