--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/svelte-fontawesome": "^0.2.3",
     "@vercel/analytics": "^1.5.0",
+    "aos": "^2.3.4",
     "deno": "^2.4.0"
   }
 }
