--wip-- [skip ci]

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.2",
     "deno": "^2.4.0",
+    "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.15.0",
     "uuid": "^11.1.0"
