--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "deno": "^2.4.0",
     "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^5.19.1",
     "prisma": "^6.15.0",
     "uuid": "^11.1.0"
   }
