--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/svelte-fontawesome": "^0.2.3",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.15.0",
     "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
