--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,20 +6,25 @@ services:
     volumes:
       - ./uploads:/directus/uploads
       - ./extensions:/directus/extensions
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    env_file:
+      - ../.env  # Go up one directory to find .env
     environment:
       KEY: 'replace-with-random-value'
       SECRET: 'replace-with-random-value'
       
-      # Prisma connection string:
-      # postgres://ccc587e4d36f15ec4a35c0aa8bb5a8be864ae3b6c1665e2744a176f89106258a:sk_3X4C_Wi-K2LlcUsDD7oIZ@db.prisma.io:5432/postgres?sslmode=require
+
+      # Prisma Dev DB connection string:
 
       DB_CLIENT: 'pg'  # or mysql, sqlite3, etc.
-      DB_HOST: 'db.prisma.io'  # could be localhost, IP, or hostname
-      DB_PORT: '5432'
-      DB_DATABASE: 'postgres'
-      DB_USER: 'ccc587e4d36f15ec4a35c0aa8bb5a8be864ae3b6c1665e2744a176f89106258a'
-      DB_PASSWORD: 'sk_3X4C_Wi-K2LlcUsDD7oIZ'
-      DB_SSL: 'true'
+      DB_HOST: 'host.docker.internal'  # could be localhost, IP, or hostname
+      DB_PORT: '51214'
+      DB_DATABASE: 'template1'
+      DB_USER: 'postgres'
+      DB_PASSWORD: 'postgres'
+      DB_SSL: 'false'
+
       # DB_CONNECTION_TIMEOUT: 60000
       # DB_ACQUIRE_CONNECTION_TIMEOUT: 60000
       
