--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     ports:
       - 8055:8055
     volumes:
-      - ./uploads:/directus/uploads
-      - ./extensions:/directus/extensions
+      - ./static/uploads:/directus/uploads
+      - ./directus/extensions:/directus/extensions
     extra_hosts:
       - "host.docker.internal:host-gateway"
     env_file:
