--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dotenvx": "dotenvx",
-    "dev": "concurrently --names dev-web,dev-db,dev-directus --prefix-colors red,blue,cyan npm:dev-web npm:dev-db npm:dev-directus",
+    "dev": "dotenvx run -- vite dev",
+    "dev-all": "concurrently --names dev-web,dev-db,dev-directus --prefix-colors red,blue,cyan npm:dev-web npm:dev-db npm:dev-directus",
     "dev-web": "dotenvx run -- vite dev",
     "dev-db": "npm exec prisma dev",
     "dev-directus": "cd directus/ && docker compose up",
