--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
 
-  postgres:
+  database:
     image: postgres:15
     restart: unless-stopped
     environment:
@@ -17,7 +17,19 @@ services:
       timeout: 5s
       retries: 5
 
-  directus:
+  cache:
+    image: redis:6
+    healthcheck:
+      test: ["CMD-SHELL", "[ $$(redis-cli ping) = 'PONG' ]"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_interval: 5s
+      start_period: 30s
+
+  admin:
+    # Directus Docs:
+    # https://directus.io/docs/self-hosting/deploying#docker-compose-examples
     image: directus/directus:latest
     restart: unless-stopped
     ports:
@@ -25,8 +37,12 @@ services:
     volumes:
       - ./static/uploads:/directus/uploads
       - ./directus/extensions:/directus/extensions
+    depends_on:
+      database:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
     environment:
-      KEY: 'replace-with-random-value'
       SECRET: 'replace-with-random-value'
 
 
@@ -42,11 +58,15 @@ services:
       # DB_CONNECTION_TIMEOUT: 60000
       # DB_ACQUIRE_CONNECTION_TIMEOUT: 60000
 
+      CACHE_ENABLED: "true"
+      CACHE_AUTO_PURGE: "true"
+      CACHE_STORE: "redis"
+      REDIS: "redis://cache:6379"
+
       ADMIN_EMAIL: 'admin@example.com'
       ADMIN_PASSWORD: 'your-admin-password'
-    depends_on:
-      postgres:
-        condition: service_healthy
+
+      PUBLIC_URL: "REPLACE_WITH_YOUR_URL"
 
   app:
     build:
@@ -61,7 +81,7 @@ services:
     environment:
       - NODE_ENV=development
     depends_on:
-      - postgres
+      - database
 
 volumes:
   postgres_data:
