--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,7 +48,7 @@ services:
 
       # Database connection:
       DB_CLIENT: 'pg'
-      DB_HOST: 'postgres'
+      DB_HOST: 'database'
       DB_PORT: '5432'
       DB_DATABASE: 'smartjobseeker'
       DB_USER: 'postgres'
