--wip-- [skip ci]

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,6 @@ services:
     environment:
       SECRET: 'replace-with-random-value'
 
-
       # Database connection:
       DB_CLIENT: 'pg'
       DB_HOST: 'database'
@@ -63,8 +62,10 @@ services:
       CACHE_STORE: "redis"
       REDIS: "redis://cache:6379"
 
-      ADMIN_EMAIL: ${ADMIN_EMAIL}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      # ADMIN_EMAIL: ${ADMIN_EMAIL}
+      # ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      ADMIN_EMAIL: 'rik@rikwanders.tech'
+      ADMIN_PASSWORD: 'waterpijp'
 
       PUBLIC_URL: ${PUBLIC_URL}
 
