--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
     ports:
       - 8055:8055
     volumes:
-      - ./static/uploads:/directus/uploads
+      - ./directus/uploads:/directus/uploads
       - ./directus/extensions:/directus/extensions
     depends_on:
       database:
@@ -70,9 +70,8 @@ services:
       PUBLIC_URL: ${PUBLIC_URL}
 
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
+    image: node:20-slim
+    working_dir: /app
     restart: unless-stopped
     ports:
       - "5173:5173"
@@ -81,6 +80,7 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+    command: sh -c "npm install && npm run dev"
     depends_on:
       - database
 
