--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -78,7 +78,7 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "npm install && npx dotenvx run -- npx vite dev --host"
     depends_on:
       - database
 
