--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -76,7 +76,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: sh -c "npm install && npx prisma generate && npx dotenvx run -- npx vite dev --host"
+    command: sh -c "npx dotenvx run -- npx vite dev --host"
     depends_on:
       - database
     environment:
