--wip-- [skip ci]

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-web": "dotenvx run -- vite dev",
     "dev-db": "npm exec prisma dev",
     "dev-directus": "cd directus/ && docker compose up",
-    "build": "npm ci && dotenvx run -- prisma migrate deploy && dotenvx run -- prisma generate && dotenvx run -- vite build",
+    "build": "npm i && dotenvx run -- prisma migrate deploy && dotenvx run -- prisma generate && dotenvx run -- vite build",
     "build:docker": "docker-compose exec app npm run build",
     "preview": "dotenvx run -- vite preview",
     "prepare": "svelte-kit sync || echo ''",
