--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: sh -c "npm run build && npx dotenvx run -- npx vite dev --host"
+    command: sh -c "npm run dev:docker"
     depends_on:
       - database
     healthcheck:
