--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: sh -c "npm run dev:docker"
+    command: sh -c "npm run docker:dev"
     depends_on:
       - database
     healthcheck:
