--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       start_period: 30s
 
   app:
-    image: node:20
+    image: node:22
     working_dir: /app
     restart: unless-stopped
     ports:
@@ -36,7 +36,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: sh -c "npm run docker:dev"
+    command: sh -c "npm ci && npm run docker:dev"
     depends_on:
       - database
     healthcheck:
