--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 
     "docker:db:cli": "docker-compose exec database psql -U postgres -d smartjobseeker",
     "docker:db:backup": "docker-compose exec database pg_dump -U postgres -d smartjobseeker > db-dumps/$(date +'%Y-%m-%d_%H-%M-%S').sql",
+    "docker:db:restore": "docker-compose exec database pg_dump -U postgres -d smartjobseeker > db-dumps/$(date +'%Y-%m-%d_%H-%M-%S').sql",
     "docker:db:migrate": "docker-compose exec app npx prisma migrate deploy",
 
     "build": "npm i && dotenvx run -- prisma migrate deploy && dotenvx run -- prisma generate && dotenvx run -- vite build",
