--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./scripts/:/scripts
+      - ./db-dumps/:/db-dumps
     ports:
       - "5432:5432"
     healthcheck:
