--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 
     "docker:db:cli": "docker-compose exec database psql -U postgres -d smartjobseeker",
     "docker:db:backup": "docker-compose exec database ./scripts/dump-db.sh",
-    "docker:db:restore": "docker-compose exec database db-dumps/$(date +'%Y-%m-%d_%H-%M-%S').sql",
+    "docker:db:restore": "docker-compose exec database ./scripts/restore-last-db-dump.sh",
     "docker:db:migrate": "docker-compose exec app npx prisma migrate deploy",
 
     "build": "npm i && dotenvx run -- prisma migrate deploy && dotenvx run -- prisma generate && dotenvx run -- vite build",
