--wip-- [skip ci]

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./scripts/:/scripts
       - ./db-dumps/:/db-dumps
+      - ./db-dumps/latest.sql:/docker-entrypoint-initdb.d/latest.sql
     ports:
       - "5432:5432"
     healthcheck:
@@ -38,16 +39,17 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: sh -c "npm ci && npm run docker:dev"
+    command: sh -c "npx prisma migrate deploy && npm ci && npm run docker:dev"
     depends_on:
-      - database
+      database:
+        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl -o /dev/null -s http://localhost:5173/"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_interval: 2s
-      start_period: 60s
+      start_period: 90s
     environment:
       NODE_ENV: development
       DATABASE_URL: 'postgres://postgres:postgres@database:5432/smartjobseeker'
