--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,16 +22,6 @@ services:
       timeout: 5s
       retries: 5
 
-  cache:
-    image: redis:6
-    healthcheck:
-      test: ["CMD-SHELL", "[ $$(redis-cli ping) = 'PONG' ]"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_interval: 2s
-      start_period: 30s
-
   app:
     image: node:22
     working_dir: /app
@@ -57,46 +47,14 @@ services:
       DATABASE_URL: 'postgres://postgres:postgres@database:5432/smartjobseeker'
 
   admin:
-    # Directus Docs:
-    # https://directus.io/docs/self-hosting/deploying#docker-compose-examples
-    image: directus/directus:latest
-    restart: unless-stopped
-    ports:
-      - 8055:8055
-    volumes:
-      - ./directus/uploads:/directus/uploads
-      - ./directus/extensions:/directus/extensions
+    extends:
+      file: docker-compose.directus.yml
+      service: admin
     depends_on:
       app:
         condition: service_healthy
       database:
         condition: service_healthy
-      cache:
-        condition: service_healthy
-    environment:
-      SECRET: ${ADMIN_SECRET}
-
-      # Database connection:
-      DB_CLIENT: 'pg'
-      DB_HOST: 'database'
-      DB_PORT: '5432'
-      DB_DATABASE: 'smartjobseeker'
-      DB_USER: 'postgres'
-      DB_PASSWORD: 'postgres'
-      DB_SSL: 'false'
-
-      # DB_CONNECTION_TIMEOUT: 60000
-      # DB_ACQUIRE_CONNECTION_TIMEOUT: 60000
-
-      CACHE_ENABLED: "true"
-      CACHE_AUTO_PURGE: "true"
-      CACHE_STORE: "redis"
-      REDIS: "redis://cache:6379"
-
-      ADMIN_EMAIL: ${ADMIN_EMAIL}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
-
-      PUBLIC_URL: ${ADMIN_PUBLIC_URL}
 
   prisma-studio:
     image: node:20
