--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: sh -c "npm ci && npm run docker:dev"
+    command: sh -c "npm ci && npm run docker:dev:init"
     depends_on:
       database:
         condition: service_healthy
