--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docker:db:backup": "docker-compose exec database ./scripts/dump-db.sh",
     "docker:db:restore": "docker-compose exec database ./scripts/restore-last-db-dump.sh",
     "docker:db:migrate": "docker-compose exec app npx prisma migrate deploy",
+    "docker:db:push:production": "docker compose exec -it app npx tsx scripts/db-push-production.ts",
     "docker:admin:production": "npx dotenvx run -f .env.production -- docker compose -f docker-compose.directus.yml up",
     "build": "npm i && dotenvx run -- prisma migrate deploy && dotenvx run -- prisma generate && dotenvx run -- vite build",
     "rebuild": "npm ci && npm run build",
@@ -78,7 +79,7 @@
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.19.1",
     "prisma": "^6.15.0",
-    "tsx": "^4.20.4",
+    "tsx": "^4.20.6",
     "uuid": "^11.1.0"
   }
 }
