--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "docker:db:migrate": "docker-compose exec app npx prisma migrate deploy",
     "docker:db:push:production": "npx tsx scripts/db-push-production.ts",
     "docker:admin:production": "npx dotenvx run -f .env.production -- docker compose -f docker-compose.directus.yml up",
-    "build": "npm i && dotenvx run -- prisma migrate deploy && dotenvx run -- prisma generate && dotenvx run -- vite build",
+    "build": "npm i && dotenvx run -- prisma generate && dotenvx run -- vite build",
     "rebuild": "npm ci && npm run build",
     "dev-concur": "concurrently --names dev-web,dev-db,dev-directus --prefix-colors red,blue,cyan npm:dev-web npm:dev-db npm:dev-directus",
     "dev-web": "dotenvx run -- vite dev",
