--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docker:db:backup": "docker-compose exec database ./scripts/dump-db.sh",
     "docker:db:restore": "docker-compose exec database ./scripts/restore-last-db-dump.sh",
     "docker:db:migrate": "docker-compose exec app npx prisma migrate deploy",
+    "docker:db:migrate:new": "docker-compose exec app npx prisma migrate dev --name",
     "docker:db:push:production": "npx tsx scripts/db-push-production.ts",
     "docker:admin:production": "npx dotenvx run -f .env.production -- docker compose -f docker-compose.directus.yml up",
     "build": "npm i && dotenvx run -- prisma generate && dotenvx run -- vite build",
