--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       retries: 5
 
   app:
-    image: node:22
+    build: .
     working_dir: /app
     restart: unless-stopped
     ports:
