--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "docker:dev:cli": "docker compose exec -it app /bin/bash",
     "docker:build-app": "docker-compose exec app npm run build",
     "docker:export-profiles-pdf": "docker-compose exec app npx tsx scripts/export-profiles-pdf.ts",
-    "docker:pull-db-schema": "docker-compose exec app npx prisma db pull",
+    "docker:update-schema": "docker-compose exec app npx prisma db pull && docker-compose exec app npx prisma generate",
     "docker:db:cli": "docker-compose exec database psql -U postgres -d smartjobseeker",
     "docker:db:backup": "docker-compose exec database ./scripts/dump-db.sh",
     "docker:db:restore": "docker-compose exec database ./scripts/restore-last-db-dump.sh",
