--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.19.1",
     "prisma": "^6.15.0",
+    "remove-markdown": "^0.6.2",
     "tsx": "^4.20.6",
     "uuid": "^11.1.0"
   }
