--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docker:update-schema": "docker-compose exec app npx prisma db pull && docker-compose exec app npx prisma generate",
     "docker:export-profile-json": "bash scripts/export-profile-docker.sh",
     "docker:export-profile-schema": "docker-compose exec app npx tsx scripts/export-profile-schema.ts",
+    "docker:export-profile-data": "docker-compose exec app npx tsx scripts/export-profile-data.ts",
     "docker:import-profile-json": "docker-compose exec app npx tsx scripts/import-profile.ts",
     "docker:clear-directus-cache": "docker compose exec app npm run clear-directus-cache",
     "docker:db:cli": "docker-compose exec database psql -U postgres -d smartjobseeker",
@@ -34,6 +35,8 @@
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
     "export-profiles-pdf": "npx tsx scripts/export-profiles-pdf.ts",
+    "export-profile-schema": "npx tsx scripts/export-profile-schema.ts",
+    "export-profile-data": "npx tsx scripts/export-profile-data.ts",
     "sync-resumes-admin": "cp -r /home/rik/dev/smart-job-seeker/src/lib/exports/* ~/data/Administratie/Freelancing/",
     "build-json-resume": "npx tsx scripts/build-json-resume.ts",
     "render-resume": "resumed render dist/resume.json --output dist/resume.html --theme jsonresume-theme-even",
