--wip-- [skip ci]

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docker:export-profile-json": "bash scripts/export-profile-docker.sh",
     "docker:export-profile-schema": "docker-compose exec app npx tsx scripts/export-profile-schema.ts",
     "docker:export-profile-data": "docker-compose exec app npx tsx scripts/export-profile-data.ts",
+    "docker:recover-tech-skills": "docker-compose exec app npx tsx scripts/recover-tech-skills.ts",
     "docker:import-profile-json": "docker-compose exec app npx tsx scripts/import-profile.ts",
     "docker:clear-directus-cache": "docker compose exec app npm run clear-directus-cache",
     "docker:db:cli": "docker-compose exec database psql -U postgres -d smartjobseeker",
@@ -37,6 +38,7 @@
     "export-profiles-pdf": "npx tsx scripts/export-profiles-pdf.ts",
     "export-profile-schema": "npx tsx scripts/export-profile-schema.ts",
     "export-profile-data": "npx tsx scripts/export-profile-data.ts",
+    "recover-tech-skills": "npx tsx scripts/recover-tech-skills.ts",
     "sync-resumes-admin": "cp -r /home/rik/dev/smart-job-seeker/src/lib/exports/* ~/data/Administratie/Freelancing/",
     "build-json-resume": "npx tsx scripts/build-json-resume.ts",
     "render-resume": "resumed render dist/resume.json --output dist/resume.html --theme jsonresume-theme-even",
