--wip-- [skip ci]

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ ADMIN_INTERNAL_URL="http://admin:8055"
 # JWT Secret
 JWT_SECRET="some-long-random-string"
 
+# Webhook Secret for Directus Flow integration
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+WEBHOOK_SECRET="your-webhook-secret-key"
+
 # SMTP2GO API Configuration
 SMTP2GO_API_KEY="your-api-key"
 
