--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
     "export-profiles-pdf": "npx tsx scripts/export-profiles-pdf.ts",
     "export-profile-schema": "npx tsx scripts/export-profile-schema.ts",
     "export-profile-data": "npx tsx scripts/export-profile-data.ts",
@@ -55,6 +58,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/uuid": "^10.0.0",
+    "@vitest/ui": "^4.0.8",
     "concurrently": "^9.2.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -72,6 +76,7 @@
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
     "vite": "^6.2.6",
+    "vitest": "^4.0.8",
     "wait-on": "^8.0.4"
   },
   "dependencies": {
