--- a/docker-compose.directus.yml
+++ b/docker-compose.directus.yml
@@ -19,6 +19,7 @@ services:
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
       PUBLIC_URL: ${ADMIN_PUBLIC_URL}
       SECRET: ${ADMIN_SECRET}
+      WEBHOOK_SECRET: ${WEBHOOK_SECRET}
 
       # Database settings:
       DB_CLIENT: ${DB_CLIENT}
