--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.2",
     "deno": "^2.4.0",
+    "groq-sdk": "^0.34.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.19.1",
     "prisma": "^6.15.0",
