Fix docker compose infinite loop in npm install
Changed app startup command to use 'npm ci --ignore-scripts' which prevents
the npm 'install' lifecycle hook from triggering recursively. Also uses
'npx dotenvx' for availability of dotenvx binary from the installed dependency.

This fixes the issue where 'npm run reinstall' would cause the container to
restart infinitely with repeated 'npm i && dotenvx run -- prisma generate'
attempts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: sh -c "npm run reinstall && npm run docker:dev"
+    command: sh -c "npm ci --ignore-scripts && npx dotenvx run -- prisma generate && npm run docker:dev"
     depends_on:
       database:
         condition: service_healthy
