--wip-- [skip ci]

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "docker:export-profile-data": "docker compose exec app npm run host:export-profile-data",
     "docker:import-profile-json": "docker compose exec app npm run host:import-profile-json",
     "docker:clear-directus-cache": "docker compose exec app npm run host:clear-directus-cache",
+    "docker:copy-collection": "docker compose exec app npm run host:copy-collection",
     "docker:db:cli": "docker compose exec database psql -U postgres -d smartjobseeker",
     "docker:db:backup": "docker compose exec database ./scripts/dump-db.sh",
     "docker:db:restore": "docker compose exec database ./scripts/restore-last-db-dump.sh",
@@ -34,6 +35,7 @@
     "host:export-profile-data": "npx tsx scripts/export-profile-data.ts",
     "host:import-profile-json": "npx tsx scripts/import-profile.ts",
     "host:clear-directus-cache": "npx tsx scripts/clear-directus-cache.ts",
+    "host:copy-collection": "npx tsx scripts/copy-collection.ts",
     "host:build-json-resume": "npx tsx scripts/build-json-resume.ts",
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
