--wip-- [skip ci]

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,8 @@ FROM_NAME="Your Name"
 ADMIN_SECRET="some-long-random-string"
 ADMIN_EMAIL="your@email"
 ADMIN_PASSWORD="yourpass"
-ADMIN_PUBLIC_URL="http://localhost:8055"
-
-# Internal URL to use to setup the Directus SDK Client
-# When using docker compose for development, this is the URL within the Docker
-# Compose network, e.g. the service name and port.
-ADMIN_INTERNAL_URL="http://admin:8055"
+DIRECTUS_URL="http://admin:8055"
+DIRECTUS_ADMIN_TOKEN="secure-token"
 
 # JWT Secret
 JWT_SECRET="some-long-random-string"
