--wip-- [skip ci]

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ FROM_NAME="Your Name"
 ADMIN_SECRET="some-long-random-string"
 ADMIN_EMAIL="your@email"
 ADMIN_PASSWORD="yourpass"
-DIRECTUS_URL="http://admin:8055"
-DIRECTUS_ADMIN_TOKEN="secure-token"
+ADMIN_URL="http://admin:8055"
+ADMIN_TOKEN="secure-token"
 
 # JWT Secret
 JWT_SECRET="some-long-random-string"
