--- a/docker-compose.directus.yml
+++ b/docker-compose.directus.yml
@@ -1,7 +1,6 @@
 # Directus Docs:
 # https://directus.io/docs/self-hosting/deploying#docker-compose-examples
 services:
-
   admin:
     image: directus/directus:latest
     restart: unless-stopped
@@ -17,10 +16,9 @@ services:
     environment:
       ADMIN_EMAIL: ${ADMIN_EMAIL}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
-      PUBLIC_URL: ${ADMIN_PUBLIC_URL}
+      ADMIN_TOKEN: ${ADMIN_TOKEN}
       SECRET: ${ADMIN_SECRET}
       WEBHOOK_SECRET: ${WEBHOOK_SECRET}
-
       # Database settings:
       DB_CLIENT: ${DB_CLIENT}
       DB_HOST: ${DB_HOST}
@@ -35,13 +33,14 @@ services:
       # Cache settings:
       CACHE_ENABLED: "true"
       CACHE_AUTO_PURGE: "true"
-      CACHE_STORE: "redis"
-      REDIS: "redis://admin-cache:6379"
-
+      CACHE_STORE: redis
+      REDIS: redis://admin-cache:6379
   admin-cache:
     image: redis:6
     healthcheck:
-      test: ["CMD-SHELL", "[ $$(redis-cli ping) = 'PONG' ]"]
+      test:
+        - CMD-SHELL
+        - '[ $$(redis-cli ping) = ''PONG'' ]'
       interval: 10s
       timeout: 5s
       retries: 5
