--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^7.0.1",
     "puppeteer": "^24.16.2",
     "resumed": "^6.0.0",
     "svelte": "^5.0.0",
@@ -87,7 +88,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/svelte-fontawesome": "^0.2.3",
     "@google/generative-ai": "^0.24.1",
-    "@prisma/client": "^6.15.0",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
     "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.2",
@@ -95,7 +97,6 @@
     "groq-sdk": "^0.34.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.19.1",
-    "prisma": "^6.15.0",
     "remove-markdown": "^0.6.2",
     "tsx": "^4.20.6",
     "uuid": "^11.1.0"
