--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,35 @@
-APP_URL="http://localhost:5173"
-FROM_EMAIL="your@email"
-FROM_NAME="Your Name"
+APP_URL=http://localhost:5173
+FROM_EMAIL=your@email
+FROM_NAME=Your Name
 
-ADMIN_SECRET="some-long-random-string"
-ADMIN_EMAIL="your@email"
-ADMIN_PASSWORD="yourpass"
-ADMIN_URL="http://admin:8055"
-ADMIN_TOKEN="secure-token"
+ADMIN_SECRET=some-long-random-string
+ADMIN_EMAIL=your@email
+ADMIN_PASSWORD=yourpass
+ADMIN_URL=http://admin:8055
+ADMIN_PUBLIC_URL=http://localhost:8055
+ADMIN_TOKEN=secure-token
 
 # JWT Secret
-JWT_SECRET="some-long-random-string"
+JWT_SECRET=some-long-random-string
 
 # Webhook Secret for Directus Flow integration
-# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-WEBHOOK_SECRET="your-webhook-secret-key"
+# Generate with: node -e console.log(require('crypto').randomBytes(32).toString('hex'))
+WEBHOOK_SECRET=your-webhook-secret-key
 
 # SMTP2GO API Configuration
-SMTP2GO_API_KEY="your-api-key"
+SMTP2GO_API_KEY=your-api-key
 
 # Groq API key for AI-powered features
-GROQ_API_KEY="your-api-key"
+GROQ_API_KEY=your-api-key
 
 # Database settings
-DATABASE_URL="prisma+postgres://localhost:51213/?api_key=your-prisma-api-key"
+DATABASE_URL=prisma+postgres://localhost:51213/?api_key=your-prisma-api-key
 
 # Directus docker settings:
-DB_CLIENT="pg"
-DB_HOST="database"
-DB_PORT="5432"
-DB_DATABASE="smartjobseeker"
-DB_USER="postgres"
-DB_PASSWORD="postgres"
+DB_CLIENT=pg
+DB_HOST=database
+DB_PORT=5432
+DB_DATABASE=smartjobseeker
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_SSL=false
