--- a/docker-compose.directus.yml
+++ b/docker-compose.directus.yml
@@ -19,6 +19,8 @@ services:
       ADMIN_TOKEN: ${ADMIN_TOKEN}
       SECRET: ${ADMIN_SECRET}
       WEBHOOK_SECRET: ${WEBHOOK_SECRET}
+      PUBLIC_URL: ${ADMIN_PUBLIC_URL}
+
       # Database settings:
       DB_CLIENT: ${DB_CLIENT}
       DB_HOST: ${DB_HOST}
